-- V1__init.sql
-- Expense Tracker initial schema
-- Design notes: docs/design-decisions.md

CREATE TABLE users (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email         VARCHAR(255) NOT NULL,
    username      VARCHAR(30)  NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    display_name  VARCHAR(100) NOT NULL,
    created_at    TIMESTAMPTZ  NOT NULL DEFAULT now(),

    CONSTRAINT uq_users_email    UNIQUE (email),
    CONSTRAINT uq_users_username UNIQUE (username)
);

CREATE TABLE categories (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id    BIGINT       NOT NULL,
    name       VARCHAR(50)  NOT NULL,
    color      VARCHAR(7),
    created_at TIMESTAMPTZ  NOT NULL DEFAULT now(),

    CONSTRAINT fk_categories_user
        FOREIGN KEY (user_id) REFERENCES users (id),
    CONSTRAINT uq_categories_user_name
        UNIQUE (user_id, name)
);

CREATE TABLE expenses (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id      BIGINT        NOT NULL,
    category_id  BIGINT        NOT NULL,
    amount       NUMERIC(12,2) NOT NULL,
    expense_date DATE          NOT NULL,
    note         VARCHAR(500),
    created_at   TIMESTAMPTZ   NOT NULL DEFAULT now(),
    updated_at   TIMESTAMPTZ   NOT NULL DEFAULT now(),

    CONSTRAINT fk_expenses_user
        FOREIGN KEY (user_id) REFERENCES users (id),
    CONSTRAINT fk_expenses_category
        FOREIGN KEY (category_id) REFERENCES categories (id) ON DELETE RESTRICT,
    CONSTRAINT ck_expenses_amount_positive
        CHECK (amount > 0)
);

CREATE INDEX idx_expenses_user_date ON expenses (user_id, expense_date);
